# skillopt-decoupled-eval

./: .env.example  .gitignore  COMPANY_PROMPT.md  README.md  conftest.py  model_config.py  pyproject.toml  requirements-extra.txt  run.py  run_all.py
SkillOpt/data/livemathematicianbench_split/test/: items.json
SkillOpt/data/livemathematicianbench_split/train/: items.json
SkillOpt/data/livemathematicianbench_split/val/: items.json
SkillOpt/data/searchqa_split/train/: items.json
SkillOpt/data/searchqa_split/val/: items.json
SkillOpt/data/spreadsheetbench_split/test/: items.json
SkillOpt/data/spreadsheetbench_split/train/: items.json
SkillOpt/skillopt/engine/: trainer.py
SkillOpt/skillopt/envs/alfworld/: rollout.py
SkillOpt/skillopt/model/: azure_openai.py
SkillOpt/skillopt/optimizer/: slow_update.py
SkillOpt/skillopt/utils/: pathsafe.py
docs/: DECOUPLED-SELECTION-COLD-START.md  DRIFT-GUARD-DESIGN.md  INFERENCE-AWARE-SELECTION-RESULT.md  MASTER-PHILOSOPHY-AND-METHODOLOGY.md  PHILOSOPHY-FLAWS-REPORT-v2.md  QWEN-CROSSMODEL-RESULT.md
qd/: __init__.py  decoupled_select.py  pairgate.py
qd/tests/: __init__.py  test_decoupled_select.py  test_inference_aware_select.py  test_pairgate.py
repro/official/: mcnemar_compare.py
repro/official/patches/: reflect_jsonload_retry.patch  test_eval_parallel.patch
tools/: _oracle_headroom.py  decoupled_ship.py  make_experiment_splits.py  materialize_all.py  materialize_livemathematicianbench.py  materialize_officeqa.py  materialize_searchqa.py  materialize_spreadsheetbench.py  mcnemar_pooled.py  posthoc_select.py
(+16 files in other folders)
